# BACKEND/controllers/auth/seller/googleLoginController.js
@@ -142,7 +142,6 @@ async function googleAuthentication(req, res) {
       userId,
       shopName,
       onboardingCompleted: false,
-      isLive: false,
       kycApproved: false
     });
 
